Reorganized: merged cpath-dao, cpath-importer, and cpath-admin modules into one new cpath-impl module; updated/fixed tests and POMs. Configured slf4j+logback logging for everything and excluded log4j and commons-logging deps; also added the enforcer maven plugin to detect unwanted transitive dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 		<dependency>
 			<groupId>org.biopax.paxtools</groupId>
 			<artifactId>paxtools-core</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>pathwaycommons.cpath</groupId>
@@ -32,6 +38,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<scope>test</scope>
+		</dependency>		
 	</dependencies>
 
 </project>
