Polished maven modules' names and some cpath2 query examples (old links depended on a particular pathway URI, which might not be there exist anymore...)

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>cpath-client</artifactId>
 	<packaging>jar</packaging>
 
-	<name>cPath Client</name>
+	<name>cPath2 - Client</name>
 	<description>cPath/cPath2 Client</description>
 
 	<dependencies>
