--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,12 @@
 	<packaging>jar</packaging>
 
 	<name>cPath2 - Client</name>
-	<description>cPath/cPath2 Client</description>
+	<description>Client library for cPath/cPath2 web services</description>
+	<url>https://github.com/PathwayCommons/cpath2</url>
+
+	<scm>
+		<url>https://github.com/PathwayCommons/cpath2</url>
+	</scm>
 
 	<dependencies>
 		<dependency>
