--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
-sudo: false
-script: ./gradlew build
+language: java
+
+jdk:
+    - openjdk8
+
+git:
+    depth: false
+
 notifications:
     slack: pathwaycommons:EDRQfFuGFr8Xn93M5xNMPVRB
